# leiden_ccd

./: CMakeLists.txt
examples/: example.cpp
include/: GraphHelper.h  LinearResolutionParameterVertexPartition.h  MutableVertexPartition.h  RBERVertexPartition.h  ResolutionParameterVertexPartition.h  TreeNode.h  ccdModularityVertexPartition.h  ccd_utils.h
src/: GraphHelper.cpp  LinearResolutionParameterVertexPartition.cpp  LouvainOptimiser.cpp  ModularityVertexPartition.cpp  MutableVertexPartition.cpp  Optimiser.cpp  RBERVertexPartition.cpp  ResolutionParameterVertexPartition.cpp  TreeNode.cpp  ccdModularityVertexPartition.cpp  ccd_utils.cpp
tests/: Multiplex_optimization_example.cpp  erdos_problem2.cpp  erdos_problem_igraph_creation.cpp  example.cpp  example2.cpp  from_coarse_test.cpp  simple_igraph_creation.cpp  spearman2.cpp  test_calcCCDsimple.cpp  test_calcCorMat.cpp
